k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel-backend-svc
  namespace: default
  annotations:
    # This annotation makes the LB internal (no public IP)
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: sentinel-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
