k8s/gateway-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-gateway-proxy
spec:
  template:
    spec:
      containers:
      - name: nginx-proxy
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-gateway-public
spec:
  type: LoadBalancer # This one is public-facing
  selector:
    app: sentinel-gateway-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
